Efmub-Ogy/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Prior_Owner__c</fullName>
        <label>Prior Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Score__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>QA Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Re_Open_Reason__c</fullName>
        <description>Delta CC - US-29 - Req-163, 697 a</description>
        <label>Re-Open Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_to_Disable_DOT_Disability_code__c</fullName>
        <label>Reason to Disable DOT Disability code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Disability_Code_Required__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>--none--</fullName>
                </value>
                <value>
                    <fullName>No Flight Info</fullName>
                </value>
                <value>
                    <fullName>Case is more than 45 days old</fullName>
                </value>
                <value>
                    <fullName>Vendor Behavior</fullName>
                </value>
                <value>
                    <fullName>Vendor Compliment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Initial Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received_Via__c</fullName>
        <label>Received From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>Air France</fullName>
                </value>
                <value>
                    <fullName>ANAC</fullName>
                </value>
                <value>
                    <fullName>Attorney General</fullName>
                </value>
                <value>
                    <fullName>Baggage</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>Corporate Communications</fullName>
                </value>
                <value>
                    <fullName>CTA</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Delta Private Jets</fullName>
                </value>
                <value>
                    <fullName>Delta Vacations</fullName>
                </value>
                <value>
                    <fullName>Disability Voicemail</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Flight Ops</fullName>
                </value>
                <value>
                    <fullName>Government Affairs</fullName>
                </value>
                <value>
                    <fullName>INDECOPI</fullName>
                </value>
                <value>
                    <fullName>In-Flight Services</fullName>
                </value>
                <value>
                    <fullName>KLM</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>OCSD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Passenger Refunds</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>RIO SAC</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SERNAC</fullName>
                </value>
                <value>
                    <fullName>SkyMiles</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Response Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running_Notes__c</fullName>
        <label>Running Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSR__c</fullName>
        <description>Delta CC - US-29 - Req-166</description>
        <label>SSR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scan_to_Carousel_Time__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Scan to Carousel Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_Number__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Ship Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyMiles_Tier__c</fullName>
        <label>SkyMiles Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Delta CC - US-29 - Req-222</description>
        <label>Station</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases(Station)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>Delta CC - US-29 - Req-210</description>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Customer Response/Documentation</fullName>
                </value>
                <value>
                    <fullName>Manager Guidance</fullName>
                </value>
                <value>
                    <fullName>Legal Guidance</fullName>
                </value>
                <value>
                    <fullName>Update Case Information</fullName>
                </value>
                <value>
                    <fullName>Update Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Survey ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Survey Score</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Party_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delta CC - US-29 - Req-183</description>
        <label>Third Party Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Threatened_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer threatened to contact the DOT.</description>
        <inlineHelpText>The customer threatened to contact the DOT.</inlineHelpText>
        <label>Threatened DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TicketNumber__c</fullName>
        <label>Web TicketNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticket_Information__c</fullName>
        <description>Delta CC - US-29 - Req-164</description>
        <label>Ticket Information</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Number__c</fullName>
        <description>Delta CC - US-29 - Req-93</description>
        <label>Ticket Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticketed_Booking_Code__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Ticketed Booking Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ticket_Value__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Total Ticket Value</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfer_To__c</fullName>
        <label>Transfer To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baggage</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Diamond Desk</fullName>
                </value>
                <value>
                    <fullName>Lost and Found</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Reservations</fullName>
                </value>
                <value>
                    <fullName>SkyMiles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travelers__c</fullName>
        <description>Travelers POC</description>
        <label>Travelers POC</label>
        <summaryFilterItems>
            <field>Case_Contact__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Traveler</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Contact__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Urgency_Code__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <label>Urgency Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer received a warning letter regarding their unacceptable behavior and could be banned from flying Delta.</description>
        <inlineHelpText>The customer received a warning letter regarding their unacceptable behavior and could be banned from flying Delta.</inlineHelpText>
        <label>Warning Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_City__c</fullName>
        <label>Web City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Country__c</fullName>
        <label>Web Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Postal_Code__c</fullName>
        <label>Web Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_State__c</fullName>
        <label>Web State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Street__c</fullName>
        <label>Web Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>World_Tracer_Number__c</fullName>
        <label>WorldTracer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_number_of_passengers__c</fullName>
        <label>total number of passengers</label>
        <summaryFilterItems>
            <field>Case_Contact__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Traveler</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Contact__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Case_Complaint_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BAG_360Ful_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG 360Ful</label>
        <queue>BAG_360Ful</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_360_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG 360</label>
        <queue>BAG_360</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Baggage_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Baggage</label>
        <queue>BAG_Baggage</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Claims_Department_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Claims Department</label>
        <queue>BAG_Claims_Department</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Claims_Temp_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Claims Temp</label>
        <queue>BAG_Claims_Temp</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_DOT_Alert_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG DOT Alert</label>
        <queue>BAG_DOT_Alert</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Damaged_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Damaged</label>
        <queue>BAG_Damaged</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Escalations_Calls_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Escalations Calls</label>
        <queue>BAG_Escalations_Calls</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Lost_and_Found_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Lost and Found</label>
        <queue>BAG_Lost_and_Found</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Rebate_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Rebate</label>
        <queue>BAG_Rebate</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Social_Media_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Social Media</label>
        <queue>BAG_Social_Media</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAG_Specialty_Handling_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAG Specialty Handling</label>
        <queue>BAG_Specialty_Handling</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAT_360_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAT 360</label>
        <queue>BAT_360</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BAT_989_FUL_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BAT 989 FUL</label>
        <queue>BAT_989_FUL</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Baggage</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Record Type to support general Baggage claims</description>
        <label>Baggage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_Care</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Record Type to support general Customer Care inquiries</description>
        <label>Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>DOT</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Record Type to support general DOT inquiries</description>
        <label>DOT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disability</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Record Type to support general Disability inquiries submitted from the DOT</description>
        <label>Disability</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSR</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Record Type to support Proactive Service Recovery</description>
        <label>PSR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Case_Summary_Required</fullName>
        <active>true</active>
        <description>Case Summary field is required when inbound Origin = Phone OR Proactive</description>
        <errorConditionFormula>AND(
OR(
 ISPICKVAL( Origin , &quot;Phone&quot;),
 ISPICKVAL( Origin , &quot;Proactive&quot;)
),
 ISBLANK( Case_Summary__c )
)</errorConditionFormula>
        <errorMessage>Case Summary is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Challenge_Case_to_Code_Required</fullName>
        <active>true</active>
        <description>Challenge Case To Code field is required when a value is set in Challenge Case To field</description>
        <errorConditionFormula>AND ( 
NOT(ISBLANK(TEXT(Challenge_Case_To__c))), 
ISPICKVAL( Challenge_Case_To_Code__c, &quot;&quot; ) 
)</errorConditionFormula>
        <errorMessage>Challenge Case To Code field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Print_Letter_Pending_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
!ISNEW(),  
ISCHANGED(Status), 
ISPICKVAL(PRIORVALUE( Status ),&apos;Print Letter Pending&apos;), !ISPICKVAL(Status, &apos;Print Letter Complete&apos;)
)</errorConditionFormula>
        <errorMessage>Case status needs to be set to &apos;Print Letter Complete&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Required</fullName>
        <active>true</active>
        <description>If inbound channel = Email, make email address required</description>
        <errorConditionFormula>AND( 
LEFT( OwnerId , 3 ) &lt;&gt; &quot;00G&quot;, 
OR( 
ISPICKVAL( Origin , &quot;Email&quot;), 
ISPICKVAL( Origin , &quot;Web&quot;) 
), 
No_Email__c = FALSE, 
AND(ISBLANK( Account.PersonContact.Email ),AccountId!=&apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>Either select No Email or enter an email address on the Customer record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exclusion_Amount_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
!ISBLANK( Claim_Amount__c ), 
ISBLANK( Exclusion_Amount__c ) 
)</errorConditionFormula>
        <errorMessage>Exclusion Amount is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exclusion_Reason_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
CONTAINS( $Profile.Name , &apos;Baggage&apos;), 
Exclusion_Amount__c != 0, 
ISBLANK( Exclusion_Reason__c ), 
ISPICKVAL(Claim_Type__c, &apos;Domestic&apos;) 
)</errorConditionFormula>
        <errorMessage>Exclusion Reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Status_Case_Closed</fullName>
        <active>true</active>
        <description>Closed Case can only be set to Status = Re-Opened</description>
        <errorConditionFormula>AND( 
ISCHANGED( Status ), 
PRIORVALUE( IsClosed ) = True, 
NOT(ISPICKVAL( Status, &quot;Re-Opened&quot;)) 
)</errorConditionFormula>
        <errorMessage>Closed Case can only be set to Status = Re-Opened</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Status_Case_Re_Open</fullName>
        <active>true</active>
        <description>Status can only be set to &apos;Re-Opened&apos; if prior value was &apos;Closed&apos;</description>
        <errorConditionFormula>AND( 
ISCHANGED( Status ), 
NOT(ISPICKVAL(PRIORVALUE( Status ), &quot;Closed&quot;)), 
ISPICKVAL( Status, &quot;Re-Opened&quot;) 
)</errorConditionFormula>
        <errorMessage>Status can only be set to &apos;Re-Opened&apos; if prior value was &apos;Closed&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mailing_Address_Required</fullName>
        <active>true</active>
        <description>If inbound channel = Letter, make mailing address required</description>
        <errorConditionFormula>AND
(
OR(
ISBLANK(  Account.PersonContact.MailingStreet ),
ISBLANK(  Account.PersonContact.MailingCity ),
ISBLANK(  Account.PersonContact.MailingState ),
ISBLANK(  Account.PersonContact.MailingPostalCode ),
ISBLANK(  Account.PersonContact.MailingCountry )
),
AccountId!=&apos;&apos;,
LEFT( OwnerId , 3 ) &lt;&gt; &quot;00G&quot;,
No_Mailing_Address__c = FALSE,
ISPICKVAL( Origin , &quot;Letter&quot;)
)</errorConditionFormula>
        <errorMessage>Either select No Mailing Address or enter a complete mailing address on the Customer record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OA_Challenge_Contact_Required</fullName>
        <active>true</active>
        <description>OA Challenge Contact is required when Challenge Case To &lt;&gt; DOT</description>
        <errorConditionFormula>AND(
!ISBLANK(TEXT( Challenge_Case_To__c )),
!ISPICKVAL( Challenge_Case_To__c , &quot;DOT&quot;),
ISBLANK ( OA_Challenge_Contact__c )
)</errorConditionFormula>
        <errorMessage>OA Challenge Contact is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Outgoing_Method_of_Contact_Required</fullName>
        <active>true</active>
        <description>Outgoing Method of Contact is required to Close a Case</description>
        <errorConditionFormula>ISBLANK(TEXT( Method_of_Contact__c )) &amp;&amp;
ISPICKVAL(Status, &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Outgoing Method of Contact is required to Close a Case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Required</fullName>
        <active>true</active>
        <description>If inbound channel = Phone, make phone number required</description>
        <errorConditionFormula>AND(
No_Phone__c  = FALSE,
ISBLANK( Account.PersonContact.Phone ),
ISPICKVAL( Origin , &quot;Phone&quot;)
)</errorConditionFormula>
        <errorMessage>Either select No Phone or enter a phone number on the Customer record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Case_Close</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( Status , &apos;Closed&apos;),Case_Complaint_Count__c = 0,  NOT(ISPICKVAL( Disability_Code_Required__c ,&apos;DOT disability code is not required&apos;)),  NOT(Allow_Case_Close__c)
)</errorConditionFormula>
        <errorMessage>Case cannot be closed without case complaint</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Status_Required</fullName>
        <active>true</active>
        <description>Sub-Status value is required when Status = Pending or Re-Opened</description>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL( Status , &quot;Pending&quot;), 
ISPICKVAL( Status , &quot;Re-Opened&quot;) 
), 
ISBLANK(TEXT( Sub_Status__c )) 
)</errorConditionFormula>
        <errorDisplayField>Sub_Status__c</errorDisplayField>
        <errorMessage>Sub-Status field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transfer_To_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
TEXT( Type ) = &quot;Referral/Transfer&quot;,
ISBLANK(TEXT(Transfer_To__c)))</errorConditionFormula>
        <errorDisplayField>Transfer_To__c</errorDisplayField>
        <errorMessage>&quot;Transfer To&quot; Field is Required when Type is Referral/Transfer</errorMessage>
    </validationRules>
</CustomObject>